--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -1,4 +1,4 @@
-@import "/assets/css/mixin";
+@import "../../assets/css/mixin";
 
 $fontSizeL: 18px;
 $fontSizeS: 16px;
@@ -34,15 +34,14 @@ $subThemeColor: #327aff;
         margin-right: 20px;
     }
     .logo {
-        background-image: url("/assets/images/header_logo.png");
+        background-image: url("../../assets/images/header_logo.png");
     }
     .logo-flow {
-        background-image: url("/assets/images/IVWEB_flow.jpg");
+        background-image: url("../../assets/images/IVWEB_flow.jpg");
     }
     .head-content {
         display: flex;
         align-items: center;
-
         margin: 0 auto;
         // height: $HeaderHeight;
         padding: 32px 0;
@@ -103,7 +102,7 @@ $subThemeColor: #327aff;
         }
         .search {
             cursor: pointer;
-            background-image: url("/assets/images/search.png");
+            background-image: url("../../assets/images/search.png");
             height: 26px;
             width: 26px;
         }
@@ -205,7 +204,6 @@ $subThemeColor: #327aff;
             .lr-service {
                 @include flex;
                 justify-content: space-between;
-                
                 color: $subThemeColor;
                 font-size: 16px;
                 span {
